<resources>
    <string name="app_name">PSU Courses App</string>
    <string name="title">PSU Courses</string>
    <string name="IT">BSIT</string>
    <string name="HM">BSHM</string>
    <string name="ED">BSED</string>
    <string name="Cost">Cost per Unit: 500.00</string>
    <string name="units">Enter total units:</string>
    <string name="O">O</string>
    <string name="Compute">Compute</string>

</resources>